[Major] removing LDA and PCA analysis, fixing features unit tests

--- a/.env_example
+++ b/.env_example
@@ -7,7 +7,7 @@ REPORT_PATH = report
 EXPORT_PATH = export
 GRAPH_PATH = graph
 # Nom du fichier pour savegarder la base de données de features
-SAVED_DATABASE_PATH = database.feather
+SAVED_DATABASE_PATH = database.npz
 # Random state pour les algorithmes faisant intervenir des probabilités
 RANDOM_STATE = 0
 # Train-test ratio pour l'entrainement des modèles
